# modular-agent-audio

./: .gitignore  Cargo.toml  README.md  README_ja.md
src/: device_list.rs  lib.rs  mic_transcribe.rs  player.rs  vad.rs
