[package]
name = "modular-agent-audio"
version = "0.1.1"
description = "Audio Agents for Modular Agent"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
base64 = "0.22.1"
log = "0.4"
modular-agent-core = "0.23.1"
rodio = "0.22"

# [patch.crates-io]
# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
